--- a/index.html
+++ b/index.html
@@ -3,52 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Green Thumb - Jardinagem e Horticultura</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Jardim da Vida</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#inicio">Início</a></li>
-                <li><a href="#jardinagem">Jardinagem</a></li>
-                <li><a href="#horticultura">Horticultura</a></li>
-                <li><a href="#dicas">Dicas e Truques</a></li>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#servicos">Serviços</a></li>
                 <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section id="inicio">
-            <h1>Bem-vindo ao Green Thumb!</h1>
-            <p>Aqui você encontrará dicas, truques e recursos para jardinagem e horticultura.</p>
-            <img src="grween.jpg" alt="logo green Thumb">
+        <section id="sobre">
+            <h1>Bem-vindo ao Jardim da Vida</h1>
+            <p>O Jardim da Vida é um espaço dedicado à jardinagem e ao cultivo de plantas. Nossa missão é inspirar as pessoas a se conectar com a natureza e a cuidar do meio ambiente.</p>
+            <img src="jardim.jpg" alt="Imagem do jardim">
         </section>
-        <section id="jardinagem">
-            <h2>Jardinagem</h2>
-            <p>A jardinagem é uma arte que requer paciência, dedicação e amor pela natureza.</p>
+        <section id="servicos">
+            <h2>Serviços</h2>
             <ul>
-                <li><a href="#">Como plantar uma horta</a></li>
-                <li><a href="#">Dicas para jardinagem orgânica</a></li>
-                <li><a href="#">Como cuidar de plantas ornamentais</a></li>
-            </ul>
-        </section>
-        <section id="horticultura">
-            <h2>Horticultura</h2>
-            <p>A horticultura é a ciência que estuda a produção de plantas para alimentação e ornamentação.</p>
-            <ul>
-                <li><a href="#">Como produzir hortaliças orgânicas</a></li>
-                <li><a href="#">Dicas para produzir frutas e legumes</a></li>
-                <li><a href="#">Como cuidar de plantas frutíferas</a></li>
-            </ul>
-        </section>
-        <section id="dicas">
-            <h2>Dicas e Truques</h2>
-            <p>Aqui você encontrará dicas e truques para jardinagem e horticultura.</p>
-            <ul>
-                <li><a href="#">Como fazer um jardim vertical</a></li>
-                <li><a href="#">Dicas para controlar pragas e doenças</a></li>
-                <li><a href="#">Como fazer um composto orgânico</a></li>
+                <li>Desenvolvimento de jardins</li>
+                <li>Cultivo de plantas</li>
+                <li>Aconselhamento em jardinagem</li>
             </ul>
         </section>
         <section id="contato">
@@ -57,7 +36,7 @@
             <form>
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome"><br><br>
-                <label for="email">E-mail:</label>
+                <label for="email">Email:</label>
                 <input type="email" id="email" name="email"><br><br>
                 <label for="mensagem">Mensagem:</label>
                 <textarea id="mensagem" name="mensagem"></textarea><br><br>
@@ -66,7 +45,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2023 Green Thumb</p>
+        <p>&copy; 2023 Jardim da Vida</p>
     </footer>
 </body>
 </html>
