--- a/index.html
+++ b/index.html
@@ -26,6 +26,54 @@
             <h2>Serviços</h2>
             <ul>
                 <li>Desenvolvimento de jardins</li>
+                O desenvolvimento de jardins envolve diversas etapas para criar espaços harmoniosos e funcionais. Aqui estão alguns passos importantes:
+
+Planejamento: Determine o propósito do jardim (decorativo, utilitário, comestível) e o estilo desejado (formal, informal, contemporâneo).
+
+Escolha do Local: Avalie a disponibilidade de luz solar, drenagem e condições do solo. Isso influencia quais plantas podem prosperar.
+
+Design: Desenhe o layout do jardim, considerando caminhos, áreas de estar, canteiros e características como fontes ou esculturas.
+
+Seleção de Plantas: Escolha plantas adequadas ao clima local, ao solo e ao estilo do jardim. Considere cores, alturas e períodos de floração para criar harmonia.
+
+Preparação do Solo: Prepare o solo adequadamente, adicionando nutrientes se necessário, e realizando a correção do pH conforme as necessidades das plantas escolhidas.
+
+Plantio: Plante suas escolhas de acordo com as recomendações de profundidade e espaçamento.
+
+Manutenção: Inclui rega regular, controle de ervas daninhas, poda e fertilização conforme necessário.
+
+Hardscape: Integre elementos como pedras, caminhos, móveis de jardim e iluminação para complementar as plantas.
+O desenvolvimento de jardins envolve diversas etapas para criar espaços harmoniosos e funcionais. Aqui estão alguns passos importantes:
+
+Planejamento: Determine o propósito do jardim (decorativo, utilitário, comestível) e o estilo desejado (formal, informal, contemporâneo).
+
+Escolha do Local: Avalie a disponibilidade de luz solar, drenagem e condições do solo. Isso influencia quais plantas podem prosperar.
+
+Design: Desenhe o layout do jardim, considerando caminhos, áreas de estar, canteiros e características como fontes ou esculturas.
+
+Seleção de Plantas: Escolha plantas adequadas ao clima local, ao solo e ao estilo do jardim. Considere cores, alturas e períodos de floração para criar harmonia.
+
+Preparação do Solo: Prepare o solo adequadamente, adicionando nutrientes se necessário, e realizando a correção do pH conforme as necessidades das plantas escolhidas.
+
+Plantio: Plante suas escolhas de acordo com as recomendações de profundidade e espaçamento.
+
+Manutenção: Inclui rega regular, controle de ervas daninhas, poda e fertilização conforme necessário.
+
+Hardscape: Integre elementos como pedras, caminhos, móveis de jardim e iluminação para complementar as plantas.
+
+Sustentabilidade: Considere práticas sustentáveis como a conservação de água, uso de plantas nativas e materiais reciclados.
+
+Acompanhamento: Observe o desenvolvimento do jardim ao longo do tempo, fazendo ajustes conforme necessário para garantir seu crescimento saudável e beleza contínua.
+
+Cada jardim é único, então adapte esses passos de acordo com suas preferências e condições específicas do local.
+
+
+
+Sustentabilidade: Considere práticas sustentáveis como a conservação de água, uso de plantas nativas e materiais reciclados.
+
+Acompanhamento: Observe o desenvolvimento do jardim ao longo do tempo, fazendo ajustes conforme necessário para garantir seu crescimento saudável e beleza contínua.
+
+Cada jardim é único, então adapte esses passos de acordo com suas preferências e condições específicas do local.
                 <li>Cultivo de plantas</li>
                 <li>Aconselhamento em jardinagem</li>
             </ul>
