--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
             <h2>Serviços</h2>
             <ul>
                 <li>Desenvolvimento de jardins</li>
-                O desenvolvimento de jardins envolve diversas etapas para criar espaços harmoniosos e funcionais. Aqui
-                estão alguns passos importantes:
+                <p></p>O desenvolvimento de jardins envolve diversas etapas para criar espaços harmoniosos e funcionais. Aqui
+                estão alguns passos
 
-                Planejamento: Determine o propósito do jardim (decorativo, utilitário, comestível) e o estilo desejado
+                <p></p>Planejamento: Determine o propósito do jardim (decorativo, utilitário, comestível) e o estilo desejado
                 (formal, informal, contemporâneo).
 
-                Escolha do Local: Avalie a disponibilidade de luz solar, drenagem e condições do solo. Isso influencia
+                <p></p>Escolha do Local: Avalie a disponibilidade de luz solar, drenagem e condições do solo. Isso influencia
                 quais plantas podem prosperar.
 
-                Design: Desenhe o layout do jardim, considerando caminhos, áreas de estar, canteiros e características
+                <p></p>Design: Desenhe o layout do jardim, considerando caminhos, áreas de estar, canteiros e características
                 como fontes ou esculturas.
 
                 Seleção de Plantas: Escolha plantas adequadas ao clima local, ao solo e ao estilo do jardim. Considere
